fix media query dark mode

--- a/readmepage/readme/style-dark.css
+++ b/readmepage/readme/style-dark.css
@@ -190,7 +190,7 @@ li.quarto:hover {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         margin: 0;
         padding: 0;
-        background-color: rgb(218, 243, 255);
+        background-color: rgb(7, 7, 7);
         height: 100%;
         width: 100%;
     }
